--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "dev": "concurrently \"npm run laravel\" \"npm run vite\"",
         "dev:no-cache": "php artisan cache:clear && npm run dev",
         "vite": "vite",
-        "laravel": "php artisan serve --host=0.0.0.0 --port=8080",
+        "laravel": "php artisan serve --host=localhost --port=8080",
         "lint": "eslint resources/js --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix",
         "cache-bust": "node cache-bust.js"
     },
